cleaning up the template for my thesis

--- a/source/chapter-1.tex
+++ b/source/chapter-1.tex
@@ -8,5 +8,5 @@
 
 %=========================================================================
 
-\PARstart{A}{ long} long time ago, in a galaxy far, far away...
+\PARstart{L}{orem} ipsum \lipsum[1-4]
 
