--- a/source/metadata.tex
+++ b/source/metadata.tex
@@ -12,4 +12,4 @@
 \department{School of Chemistry}
 
 % University
-\university{\sc The University of Melbourne}
+\university{\scshape The University of Melbourne}
