--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,13 +1,7 @@
-%%
-%% VERSION HISTORY
-%%    22 May 2006 - John Papandriopoulos - Original version
-%%    12 Jul 2007 - John Papandriopoulos - Converted into template
-%%
-
 \begin{abstract}%
-%
-\PARstart{T}{he} focus of this template is to give the thesis writer a kick-start on developing their thesis in \LaTeX\ by providing a template that satisfies the University of Melbounre's requirements (at the time of writing), that also happens to look gorgeous.
-%
+
+\lettrine{T}{he} focus of this template is to give the thesis writer a kick-start on developing their thesis in \LaTeX\ by providing a template that satisfies the University of Melbounre's requirements (at the time of writing), that also happens to look gorgeous.
+
 \end{abstract}
 
 \clearpage
