--- a/source/chapter-1.tex
+++ b/source/chapter-1.tex
@@ -1,12 +1,16 @@
-%%
-%% VERSION HISTORY
-%%    22 May 2006 - John Papandriopoulos - Original version
-%%    12 Jul 2007 - John Papandriopoulos - Converted into template
-%%
-
 \chapter{Introduction}
+	\label{chapter:introduction}
+	%
+
+% preferred location for figures in this chapter
+\setfigurepath{figures/chapter-1}
 
 %=========================================================================
 
-\PARstart{L}{orem} ipsum \lipsum[1-4]
+\section{Introduction}
 
+
+%=========================================================================
+
+
+\mybib{bib/test.bib}
