--- a/source/chapter-2.tex
+++ b/source/chapter-2.tex
@@ -1,9 +1,3 @@
-%%
-%% VERSION HISTORY
-%%    22 May 2006 - John Papandriopoulos - Original version
-%%    12 Jul 2007 - John Papandriopoulos - Converted into template
-%%
-
 \chapter{A New Hope}
 	\label{chapter:a-new-hope}
 	%
@@ -21,5 +15,6 @@
 
 \section{Introduction}
 
-\PARstart{F}{lying} above is a rebel ship carrying some very important cargo, followed by a star destroyer on its tail...
+\PARstart{F}{lying} above is a rebel ship carrying some very important cargo, followed by a star destroyer on its tail...\cite{Lorch1969}
 
+\mybib{bib/test.bib}
