--- a/source/chapter-3.tex
+++ b/source/chapter-3.tex
@@ -1,9 +1,3 @@
-%%
-%% VERSION HISTORY
-%%    22 May 2006 - John Papandriopoulos - Original version
-%%    12 Jul 2007 - John Papandriopoulos - Converted into template
-%%
-
 \chapter{The Empire Strikes Back}
 	\label{chapter:empire-strikes-back}%
 	%
@@ -21,5 +15,6 @@
 
 \section{Introduction}
 
-\PARstart{U}{se} the force Luke...
+\PARstart{U}{se} the force Luke...\cite{Salmon2006}
 
+\mybib{bib/test.bib}
