Changed folder structure, and compilation workflow

--- a/source/backmatter/appendix.tex
+++ b/source/backmatter/appendix.tex
@@ -1,16 +1,12 @@
-\chapter{Introduction}
-	\label{chapter:introduction}
-	%
-
-% preferred location for figures in this chapter
-\setfigurepath{figures/chapter-1}
+\chapter{Appendix}
+		\label{appendix}
 
 %=========================================================================
 
-\section{Introduction}
+\section{The Force Awakens}
 
+\lipsum[50-55]\cite{Drewitt2015}
 
 %=========================================================================
-
-
 \mybib{bib/test.bib}
+
