renamed user-defined.tex to preamble.tex

--- a/source/main.tex
+++ b/source/main.tex
@@ -4,7 +4,7 @@
 \usepackage{style/uomthesis}
 
 % User defined commands
-\input{user-defined}
+\input{preamble}
 
 % suppress "Produced on archival quality paper." on the title page
 \newcommand{\archivalpapernote}{}
