better chapter heading, organised preamble, added colophon

--- a/source/backmatter/appendix.tex
+++ b/source/backmatter/appendix.tex
@@ -1,3 +1,13 @@
+% path to figures directory
+\graphicspath{{figures/appendix/}}
+
+%=========================================================================
+
+\begin{savequote}[75mm]
+Nulla facilisi. In vel sem. Morbi id urna in diam dignissim feugiat. Proin molestie tortor eu velit. Aliquam erat volutpat. Nullam    ultrices, diam tempus vulputate egestas, eros pede varius leo.
+\qauthor{Quoteauthor Lastname}
+\end{savequote}
+
 \chapter{Appendix}
 		\label{appendix}
 
@@ -8,5 +18,6 @@
 \lipsum[50-55]\cite{Drewitt2015}
 
 %=========================================================================
+
 \mybib{bib/test.bib}
 
