finished with the template (for now)

--- a/source/frontmatter/abstract.tex
+++ b/source/frontmatter/abstract.tex
@@ -1,7 +1,11 @@
 \begin{abstract}%
 
-{\scshape The} focus of this template is to give the thesis writer a kick-start on developing their thesis in \LaTeX\ by providing a template that satisfies the University of Melbounre's requirements (at the time of writing), that also happens to look gorgeous.
+{\scshape A long time ago in a galaxy far far away...}
+
+It is a period of civil war. Rebel spaceships, striking from a hidden base, have won their first victory against the evil Galactic Empire.
+
+During the battle, rebel spies managed to steal secret plans to the Empire's ultimate weapon, the DEATH STAR, an armored space station with enough power to destroy an entire planet.
+
+Pursued by the Empire's sinister agents, Princess Leia races home aboard her starship, custodian of the stolen plans that can save her people and restore freedom to the galaxy....
 
 \end{abstract}
-
-\clearpage
