--- a/source/frontmatter/acknowledgements.tex
+++ b/source/frontmatter/acknowledgements.tex
@@ -1,5 +1,3 @@
 \begin{acknowledgements}
-
-	I'd like to thank John Papandriopoulos, for providing a wonderful template---my thesis now looks gorgeous!
-
+    I would like to thank Han Solo who ran the fastest parsec the likes of which the world has never seen the likes of which.
 \end{acknowledgements}
