removed extra blank pages between appendices and glossary/index

--- a/source/main.tex
+++ b/source/main.tex
@@ -71,12 +71,12 @@
     \end{appendix}
 
     %%
-    %% Bibliography
+    %% Back matter
     %%
+    \glsaddall
     \begin{backmatter}
         \frontmatterheadings
 
-        \glsaddall
         \printglossary[title=Definition of Symbols and Acronyms]
 
         \clearpage
